--- a/council_finance/templates/council_finance/home.html
+++ b/council_finance/templates/council_finance/home.html
@@ -99,7 +99,7 @@
         <div class="counter-factoid" 
              data-counter="{{ item.slug }}"
              data-council="all-councils"
-             data-year="{{ current_year.label }}">
+             data-year="{{ current_year }}">
         </div>
         
         {% if item.explanation %}
